<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_first_activity"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@color/white"
        />


</LinearLayout>